# Risk_Profiling_Agent

./: .gitattributes  .gitignore  Dockerfile  README.md  artifact.md  docker-compose.yml  pyproject.toml
src/wealth_risk_profiler/: __init__.py  main.py  models.py
src/wealth_risk_profiler/agents/: __init__.py  risk_profiler.py
src/wealth_risk_profiler/utils/: pdf_generator.py
tests/: test_api.py
